Scrollbar issue is fixed

--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ section.main {
 }
 
 .container {
+   display: flex;
+   flex-direction: column; 
    max-width: 800px;
    width: 100%;
    height: 500px;
